--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Run tests
         run: |
           source venv/bin/activate
-          flake8
+          flake8 --exclude venv
   test:
     runs-on: ubuntu-latest
     steps:
